--- a/index.html
+++ b/index.html
@@ -2,21 +2,20 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Chatbot xử lý sự cố</title>
 </head>
 <body>
-  <h2>👋 Chào mừng bạn đến với Chatbot!</h2>
+  <h1>👋 Chào mừng bạn đến với Chatbot!</h1>
   <p>Vui lòng bấm biểu tượng góc phải màn hình để bắt đầu trò chuyện.</p>
 
-  <script src="https://cdn.botpress.cloud/webchat/v3/inject.js"></script>
+  <!-- MÃ NHÚNG CHATBOT BOTPRESS -->
+  <script src="https://cdn.botpress.cloud/webchat/v3.2.1/webchat.js"></script>
   <script>
     window.botpressWebChat.init({
-      "botId": "01eyspke5c8hzq86k5jzt0eq2b",
-      "hostUrl": "https://cdn.botpress.cloud/webchat/v3",
-      "messagingUrl": "https://messaging.botpress.cloud",
-      "clientId": "01eyspke5c8hzq86k5jzt0eq2b",
-      "enableConversationDeletion": true
+      "configUrl": "https://files.bpcontent.cloud/2025/08/04/02/20250804020820-1WXQYNAA.json",
+      "hostUrl": "https://cdn.botpress.cloud/webchat/v3.2.1",
     });
   </script>
 </body>
