--- a/index.html
+++ b/index.html
@@ -1,64 +1,21 @@
 <!doctype html>
 <html lang="vi">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Chatbot xử lý sự cố</title>
-  <style>
-    body{font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif; line-height:1.6; padding:24px;}
-    h1{font-size:2rem; margin:0 0 8px}
-    p{margin:0 0 24px}
-  </style>
-</head>
-<body>
-  <h1>👋 Chào mừng bạn đến với Chatbot!</h1>
-  <p>Vui lòng bấm biểu tượng bong bóng ở góc phải dưới màn hình để bắt đầu trò chuyện.</p>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Chatbot xử lý sự cố</title>
 
-  <!-- 1) Nạp SDK webchat Botpress -->
-  <script defer src="https://cdn.botpress.cloud/webchat/v3.2/inject.js"></script>
+    <!-- Chỉ cần 2 script của Botpress (đặt trong <head>) -->
+    <script src="https://cdn.botpress.cloud/webchat/v3.2/inject.js" defer></script>
+    <script src="https://files.bpcontent.cloud/2025/08/04/02/20250804020820-KK4UE7FL.js" defer></script>
 
-  <!-- 2) Khởi tạo webchat -->
-  <script>
-    function initBP() {
-      if (!window.botpressWebChat || !window.botpressWebChat.init) {
-        console.log('[BP] Chưa có botpressWebChat, chờ thêm...');
-        return false;
-      }
-      console.log('[BP] Bắt đầu init...');
-      window.botpressWebChat.init({
-        // NHỚ: đúng camelCase
-        configUrl: "https://files.bpcontent.cloud/2025/08/04/02/20250804020820-1WXQYNAA.json",
-
-        // vài tuỳ chọn nên có
-        useSessionStorage: true,
-        botName: "Chuyên Viên Hỗ Trợ Toà Nhà",
-        composerPlaceholder: "Nhập nội dung sự cố..."
-      });
-
-      // Mở widget ngay (nếu muốn thấy rõ là nó đã lên)
-      window.botpressWebChat.open();
-      console.log('[BP] Đã gọi init + open()');
-      return true;
-    }
-
-    // Đảm bảo gọi init sau khi trang đã load
-    window.addEventListener('load', () => {
-      // Thử init ngay
-      if (initBP()) return;
-
-      // Nếu SDK chưa sẵn sàng, poll thêm chút
-      const poll = setInterval(() => {
-        if (initBP()) clearInterval(poll);
-      }, 400);
-
-      // Sau 5s mà vẫn chưa khởi tạo được → báo lỗi gợi ý
-      setTimeout(() => {
-        if (!window.botpressWebChat || !window.botpressWebChat.init) {
-          console.error('[BP] Không khởi tạo được. Hãy mở DevTools > Console để xem lỗi. ' +
-                        'Kiểm tra configUrl có truy cập được không, và hard reload trang.');
-        }
-      }, 5000);
-    });
-  </script>
-</body>
+    <style>
+      body{font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;line-height:1.6;padding:24px}
+      h1{font-size:2rem;margin:0 0 8px} p{margin:0 0 24px}
+    </style>
+  </head>
+  <body>
+    <h1>👋 Chào mừng bạn đến với Chatbot!</h1>
+    <p>Vui lòng bấm biểu tượng bong bóng ở góc phải dưới màn hình để bắt đầu trò chuyện.</p>
+  </body>
 </html>
