--- a/index.html
+++ b/index.html
@@ -1,21 +1,16 @@
 <!doctype html>
 <html lang="vi">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Chatbot xử lý sự cố</title>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Chatbot xử lý sự cố</title>
 
-    <!-- Chỉ cần 2 script của Botpress (đặt trong <head>) -->
-    <script src="https://cdn.botpress.cloud/webchat/v3.2/inject.js" defer></script>
-    <script src="https://files.bpcontent.cloud/2025/08/04/02/20250804020820-KK4UE7FL.js" defer></script>
-
-    <style>
-      body{font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;line-height:1.6;padding:24px}
-      h1{font-size:2rem;margin:0 0 8px} p{margin:0 0 24px}
-    </style>
-  </head>
-  <body>
-    <h1>👋 Chào mừng bạn đến với Chatbot!</h1>
-    <p>Vui lòng bấm biểu tượng bong bóng ở góc phải dưới màn hình để bắt đầu trò chuyện.</p>
-  </body>
+  <!-- NÊN dùng đúng 2 script bạn copy từ Chat Bubble -->
+  <script src="https://cdn.botpress.cloud/webchat/v3.2/inject.js" defer></script>
+  <script src="https://files.bpcontent.cloud/2025/08/04/02/20250804020820-KK4UE7FL.js" defer></script>
+</head>
+<body>
+  <h1>👋 Chào mừng bạn đến với Chatbot!</h1>
+  <p>Vui lòng bấm biểu tượng bong bóng ở góc phải dưới màn hình để bắt đầu trò chuyện.</p>
+</body>
 </html>
